--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,20 @@
+h2{
+  text-align: center;
+  padding: 1.5rem 2.5rem;
+  background-image: linear-gradient(120deg, #77c90b 0%, #ffd900 100%);
+  margin: 0 0 2rem 0;
+  font-size: 1.5rem;
+  color: white;
+}
 
+.filtros{
+  text-align:center;
+  margin: 1rem;
+  box-shadow: 2px 4px 25px rgba(0, 0, 0, .1);
+  border-radius: 12px;
+  overflow: hidden;
+  transition: all .2s linear;
+}
 
 .quadroDeputado{
     border:1px solid black;
@@ -33,7 +49,6 @@
 
 /* Modal Content */
 .modal-content {
-  background-color: #fefefe;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
@@ -59,6 +74,9 @@
   
 } */
 
+
+/* CSS abaixo retirado de <https://ghibliapi.herokuapp.com> */
+
 * {
     box-sizing: border-box
   }
@@ -68,8 +86,7 @@
     -moz-osx-font-smoothing: grayscale;
     font-family: 'Dosis', sans-serif;
     line-height: 1.6;
-    color: #666;
-    background: #F6F6F6;
+    background: #525252;
     
   }
   
